--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ frontend/.env.production.local
 
 # vercel
 frontend/.vercel
+# Frontend
+frontend/node_modules/
+frontend/.next/
+frontend/.env.local
+.DS_Store
